--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
-openai = "^0.27.5"
+openai = "^0.27.6"
 python-dotenv = "^1.0.0"
+jupyter = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
