--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 openai = "^0.27.6"
 python-dotenv = "^1.0.0"
 jupyter = "^1.0.0"
+redlines = "^0.3.0"
 
 [build-system]
 requires = ["poetry-core"]
