--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ openai = "^0.27.6"
 python-dotenv = "^1.0.0"
 jupyter = "^1.0.0"
 redlines = "^0.3.0"
+panel = "^0.14.4"
 
 [build-system]
 requires = ["poetry-core"]
